--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "tasks": [
         {
             "label": "Run File",
-            "command": "python ${file}",
+            "command": "python '${file}'",
             "type": "shell",
             "group": {
                 "kind": "build",
